alter breakpoint to fix btn alignment on some devices

--- a/bigbluebutton-html5/imports/ui/stylesheets/variables/breakpoints.scss
+++ b/bigbluebutton-html5/imports/ui/stylesheets/variables/breakpoints.scss
@@ -13,10 +13,10 @@
   @return nth($range, 2);
 }
 
-$xsmall-range: (0em, 23.437em);
-/* 0, 375px */
+$xsmall-range: (20em, 25.937em);
+/* 320px, 415px */
 $small-range: (23.5em, 40em);
-/* 376p, 640px */
+/* 376px, 640px */
 $medium-range: (40.063em, 64em);
 /* 641px, 1024px */
 $large-range: (64.063em, 90em);
